--- a/po_approval/views/po_approval_view.xml
+++ b/po_approval/views/po_approval_view.xml
@@ -34,6 +34,7 @@
 									<tree editable="bottom">
 										<field name="user_ids" widget="many2many_tags"/>
 										<field name="from_amount"/>
+										<field name="currency_id" invisible="1"/>
 										<field name="to_amount"/>
 									</tree>
 								</field>
